Minor fixes for typos and AttackLog